--- a/.github/workflows/mypy-type-lint.yml
+++ b/.github/workflows/mypy-type-lint.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: unit test action
+name: mypy type lint action
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.6.12"]
+        python-version: ["3.10.2"]
 
     steps:
     - uses: actions/checkout@v2
@@ -27,7 +27,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install mypy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with UnitTest
       run: |
-        python -m unittest TDecimalUnitTest.py
+        mypy --strict TDecimal.py
