--- a/.github/workflows/mypy-type-lint.yml
+++ b/.github/workflows/mypy-type-lint.yml
@@ -29,6 +29,6 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install mypy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Test with UnitTest
+    - name: mypy strict mode lint
       run: |
         mypy --strict TDecimal.py
