--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: code coverage action
+name: unittest & coverage
 
 on:
   push:
@@ -29,6 +29,6 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: code_coverage
+    - name: code_coverage and unit test
       run: |
         coverage run -m unittest TDecimalUnitTest.py && coverage report -m
