--- a/.github/workflows/mypy-type-lint.yml
+++ b/.github/workflows/mypy-type-lint.yml
@@ -31,4 +31,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: mypy strict mode lint
       run: |
-        mypy --strict TDecimal.py
+        mypy --strict --no-warn-return-any TDecimal.py
