--- a/.github/workflows/flake8-lint.yml
+++ b/.github/workflows/flake8-lint.yml
@@ -31,4 +31,4 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
-        flake8 --max-line-length=127 TDecimal.py TDecimalUnitTest.py TDecimalException.py
+        bash flake8_check.sh
