--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -29,6 +29,6 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install coverage
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: code_coverage and unit test_newline
+    - name: code_coverage and unit test
       run: |
         bash code_coverage.sh no-html-gen
